@@ -2,6 +2,8 @@
 
     * Fixed encoding bug in PTYsession: -keyDown:
     
+    * Workaround for a possible Cocoa bug in copy/paste.
+    
 
 2003-02-13	fabian
     * Enhanced text input
